Preventing overlapping nodes

--- a/src/GraphController/GraphController.scss
+++ b/src/GraphController/GraphController.scss
@@ -14,7 +14,7 @@
         padding: 0.5rem;
         margin: 0.5rem;
 
-        font-size: 2rem;
+        font-size: 1rem;
 
         @include buttonWithBorder();
 
